# tauri-nextjs-android-example

./: .cz-config.json  .czrc  .gitignore  .lintstagedrc.js  .prettierrc  CHANGELOG.md  README.md  commitlint.config.cjs  eslint.config.mjs  i18n.tool.mjs  next.config.ts  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json
.github/workflows/: build.yml
.husky/: commit-msg
public/locales/ar/: home.json
public/locales/de/: home.json
public/locales/en/: home.json
public/locales/es/: home.json
public/locales/fr/: home.json
public/locales/it/: home.json
public/locales/ja/: home.json
public/locales/nl/: home.json
public/locales/pt/: home.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/info/: android.rs  info.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/app/[locale]/: layout.tsx  page.module.scss  page.tsx
src/components/info/: index.tsx
src/components/loading/: index.module.scss  index.tsx
src/components/switchLanguage/: index.tsx
src/lib/: i18n.ts
src/styles/: public.scss
